@@ -85,7 +85,9 @@ int mosquitto_main_loop(struct mosquitto_db *db, int *listensock, int listensock
 #endif
 
 	while(run){
+#ifdef WITH_SYS_TREE
 		mqtt3_db_sys_update(db, db->config->sys_interval, start_time);
+#endif
 
 		if(listensock_count + db->context_count > pollfd_count){
 			pollfd_count = listensock_count + db->context_count;
